--- a/formLogica.html
+++ b/formLogica.html
@@ -28,7 +28,7 @@
         <br>
         <br>
         <form name="Form" onsubmit="return validateForm()" class="" id="Form">
-
+            <input type="hidden" name="t" value="5">
             <div class="card">
                 <p><strong>Por favor Ingrese su Nombre</strong></p>
                 <input class="form-control" type="text" name="nombre" maxlength="100">
@@ -111,7 +111,7 @@
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./assets/js/logica.js"></script>
+    <script src="./assets/js/formb.js"></script>
     <script>
         AOS.init();
     </script>
