--- a/info.html
+++ b/info.html
@@ -207,7 +207,12 @@
         </div>
     </div>
 
-
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+          </div>
+        </li>
+      </ul>
 
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
