--- a/formScrum.html
+++ b/formScrum.html
@@ -13,7 +13,7 @@
     <style>
         .error {
             background-color: rgb(219, 8, 8);
-            color: cornsilk;
+            color: rgb(245, 243, 238);
         }
     </style>
 </head>
