--- a/htmlCss.html
+++ b/htmlCss.html
@@ -15,46 +15,33 @@
 <body class="body2">
 
     <!-- Barra de Navegación-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container px-4 px-lg-5">
+    <ul class="nav justify-content-center" style="
+    padding-bottom: 2%;
+    padding-top: 2%;">
+    <a class="navbar-brand" href="./index.html">
+      <img src="./assets/img/Helprogram1.png" class="logo" alt="logo" width="150">
+    </a>
 
-
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto">
-                    <a class="navbar-brand" href="./index.html">
-                        <img src="./assets/img/Helprogram1.png" alt="logo" width="100">
-                    </a>
-
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="info.html">Sobre Nosotros</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Cursos </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="htmlCss.html">HTML+CSS</a></li>
-                            <li><a class="dropdown-item" href="logica.html">LÓGICA Y ALGORITMIA</a></li>
-                            <li><a class="dropdown-item" href="js.html">JS</a></li>
-                            <li><a class="dropdown-item" href="bootstrap.html">BOOSTRAP</a></li>
-                            <li><a class="dropdown-item" href="repositorios.html">REPOSITORIOS</a></li>
-                            <li><a class="dropdown-item" href="scrum.html">SCRUM</a></li>
-                        </ul>
-                    </li>
-
-
-                </ul>
-
-            </div>
-        </div>
-    </nav>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="./info.html">Sobre Nosotros</a>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Cursos </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="htmlCss.html">HTML+CSS</a></li>
+        <li><a class="dropdown-item" href="logica.html">LÓGICA Y ALGORITMIA</a></li>
+        <li><a class="dropdown-item" href="js.html">JS</a></li>
+        <li><a class="dropdown-item" href="bootstrap.html">BOOSTRAP</a></li>
+        <li><a class="dropdown-item" href="repositorios.html">REPOSITORIOS</a></li>
+        <li><a class="dropdown-item" href="scrum.html">SCRUM</a></li>
+      </ul>
+    </li>
+    </ul>
     <!-- Banner-->
     <div class="banner2" data-aos="fade-down">
         <h1>
