subida del juego con la funcionalidad del tiempo y cambios en el menu

--- a/formHtmlCss.html
+++ b/formHtmlCss.html
@@ -19,48 +19,52 @@
 </head>
 
 <body class="body1">
-
-
-
-
     <ul class="nav justify-content-center" style="
     padding-bottom: 2%;
     padding-top: 2%;">
-    <a class="navbar-brand" href="./index.html">
-      <img src="./assets/img/Helprogram1.png" class="logo" alt="logo" width="150">
-    </a>
+        <a class="navbar-brand" href="./index.html">
+            <img src="./assets/img/Helprogram1.png" class="logo" alt="logo" width="150">
+        </a>
 
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="./info.html">Sobre Nosotros</a>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Cursos </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="htmlCss.html">HTML+CSS</a></li>
-        <li><a class="dropdown-item" href="logica.html">LÓGICA Y ALGORITMIA</a></li>
-        <li><a class="dropdown-item" href="js.html">JS</a></li>
-        <li><a class="dropdown-item" href="bootstrap.html">BOOSTRAP</a></li>
-        <li><a class="dropdown-item" href="repositorios.html">REPOSITORIOS</a></li>
-        <li><a class="dropdown-item" href="scrum.html">SCRUM</a></li>
-      </ul>
-    </li>
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="./info.html">Sobre Nosotros</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Cursos </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="htmlCss.html">HTML+CSS</a></li>
+                <li><a class="dropdown-item" href="logica.html">LÓGICA Y ALGORITMIA</a></li>
+                <li><a class="dropdown-item" href="js.html">JS</a></li>
+                <li><a class="dropdown-item" href="bootstrap.html">BOOSTRAP</a></li>
+                <li><a class="dropdown-item" href="repositorios.html">REPOSITORIOS</a></li>
+                <li><a class="dropdown-item" href="scrum.html">SCRUM</a></li>
+            </ul>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Juego </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="juego.html">Quien Quiere ser Millonario</a></li>
+            </ul>
+        </li>
 
-  </ul>
-    
+    </ul>
+
     <div class="bannerCuestionario " data-aos="fade-down">
-        
+
     </div>
     <br>
     <div class="container rounded-1 text-center" data-aos="fade-down">
-      <br>
+        <br>
         <div class="card card-padding">
-        <h1 class="display-5">Cuestionario final de HTML y CSS</h1>
-        <hr>
+            <h1 class="display-5">Cuestionario final de HTML y CSS</h1>
+            <hr>
         </div>
         <br>
         <br>
@@ -68,7 +72,8 @@
 
             <div class="card card-padding">
                 <p>Nombre <i class="red">*</i></p>
-                <input class="form-control borde-abajo" type="text" name="nombre" maxlength="100" placeholder="Respuesta corta">
+                <input class="form-control borde-abajo" type="text" name="nombre" maxlength="100"
+                    placeholder="Respuesta corta">
                 <div class="error" id="nombreErr"></div>
             </div>
 
@@ -126,8 +131,9 @@
             <br>
             <div class="card card-padding">
                 <p>¿CSS controla el aspecto gráfico de una página web mediante hojas de
-                    estilo indicando al navegador como se deben visualizar los elementos de un documento HTML?<i class="red">*</i>
-                    </p>
+                    estilo indicando al navegador como se deben visualizar los elementos de un documento HTML?<i
+                        class="red">*</i>
+                </p>
                 <div class="form-inline">
                     <p><input type="radio" name="p6" value="v"> Verdadero</p>
                     <p><input type="radio" name="p6" value="f"> Falso</p>
