--- a/index.html
+++ b/index.html
@@ -39,9 +39,17 @@
         <li><a class="dropdown-item" href="scrum.html">SCRUM</a></li>
       </ul>
     </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Juego </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="juego.html">Quien Quiere ser Millonario</a></li>
+      </ul>
+    </li>
 
   </ul>
-  
+
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -123,9 +131,9 @@
       porogramación, contamos con diversos temas que te ayudarán a iniciarte en este
       mundo de la porogramación, también encontrarés muchos datos y consejos interesantes para facilitar aun mas tu
       aprendizaje, asi que animate y empieza este camino tan espectacular. </p>
-      <br>
-      <hr>
-      <br>
+    <br>
+    <hr>
+    <br>
   </div>
   <br>
   <!--
