--- a/formRepositorios.html
+++ b/formRepositorios.html
@@ -47,6 +47,14 @@
                 <li><a class="dropdown-item" href="scrum.html">SCRUM</a></li>
             </ul>
         </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Juego </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="juego.html">Quien Quiere ser Millonario</a></li>
+            </ul>
+        </li>
 
     </ul>
 
