--- a/scrum.html
+++ b/scrum.html
@@ -18,29 +18,38 @@
     <ul class="nav justify-content-center" style="
     padding-bottom: 2%;
     padding-top: 2%;">
-    <a class="navbar-brand" href="./index.html">
-      <img src="./assets/img/Helprogram1.png" class="logo" alt="logo" width="150">
-    </a>
+        <a class="navbar-brand" href="./index.html">
+            <img src="./assets/img/Helprogram1.png" class="logo" alt="logo" width="150">
+        </a>
 
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="./info.html">Sobre Nosotros</a>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Cursos </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="htmlCss.html">HTML+CSS</a></li>
-        <li><a class="dropdown-item" href="logica.html">LÓGICA Y ALGORITMIA</a></li>
-        <li><a class="dropdown-item" href="js.html">JS</a></li>
-        <li><a class="dropdown-item" href="bootstrap.html">BOOSTRAP</a></li>
-        <li><a class="dropdown-item" href="repositorios.html">REPOSITORIOS</a></li>
-        <li><a class="dropdown-item" href="scrum.html">SCRUM</a></li>
-      </ul>
-    </li>
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="./info.html">Sobre Nosotros</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Cursos </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="htmlCss.html">HTML+CSS</a></li>
+                <li><a class="dropdown-item" href="logica.html">LÓGICA Y ALGORITMIA</a></li>
+                <li><a class="dropdown-item" href="js.html">JS</a></li>
+                <li><a class="dropdown-item" href="bootstrap.html">BOOSTRAP</a></li>
+                <li><a class="dropdown-item" href="repositorios.html">REPOSITORIOS</a></li>
+                <li><a class="dropdown-item" href="scrum.html">SCRUM</a></li>
+            </ul>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Juego </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="juego.html">Quien Quiere ser Millonario</a></li>
+            </ul>
+        </li>
+
     </ul>
     <!-- Banner-->
     <div class="bannerScrum" data-aos="fade-down">
