integrando ayuda al juego

--- a/juego.html
+++ b/juego.html
@@ -65,6 +65,7 @@
       </h2>
       <span id="timer" style="text-align: left;">Tiempo: 30 segundos</span>	
       <button class="btn btn-lg btn-dark" id="start">START</button>
+      <button class="btn btn-lg btn-info" id="ayuda">Ayuda del Publico</button>
     </div>
     <div class="card text-center bg-dark" id="pregunta1">
       <br>
