--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 
 
   <br>
-  <!-- <div class="containeer2">
+  <div class="containeer2">
       <h3>HELPROGRAM</h3>
       <br>
       <p>Hola, ¿Te gusta programar?, bienvenido a <strong>HELPROGRAM</strong> el aplicativo web donde aprenderas de porogramación, contamos con diversos temas que te ayudarán a iniciarte en este 
           mundo de la porogramación, también encontrarés muchos datos y consejos interesantes para facilitar aun mas tu aprendizaje, asi que animate y empieza este camino tan espectacular.  </p>
-      </div>-->
-
+      </div>
+<!--
   <div class="container rounded-1 bg-light" data-aos="fade-down">
     <br>
     <h3 class="display-5 bg-dark"><span class="badge badge-secondary">HELPROGRAM</span></h3>
@@ -135,6 +135,7 @@
     <hr>
     <br>
   </div>
+-->
   <br>
   <!--
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Comentarios</button>
