--- a/juego.html
+++ b/juego.html
@@ -66,6 +66,7 @@
       <span id="timer" style="text-align: left;">Tiempo: 30 segundos</span>	
       <button class="btn btn-lg btn-dark" id="start">START</button>
       <button class="btn btn-lg btn-info" id="ayuda">Ayuda del Publico</button>
+      <button class="btn btn-lg btn-info" id="ayuda2">Llamada a un amigo</button>
     </div>
     <div class="card text-center bg-dark" id="pregunta1">
       <br>
