--- a/juego.html
+++ b/juego.html
@@ -46,7 +46,7 @@
         <li><a class="dropdown-item" href="juego.html">Quien Quiere ser Millonario</a></li>
       </ul>
     </li>
-    
+
   </ul>
   <br>
 
@@ -63,10 +63,19 @@
         Puntos Acumulados:
         <div id="puntos"></div>
       </h2>
-      <span id="timer" style="text-align: left;">Tiempo: 30 segundos</span>	
+      
       <button class="btn btn-lg btn-dark" id="start">START</button>
-      <button class="btn btn-lg btn-info" id="ayuda">Ayuda del Publico</button>
-      <button class="btn btn-lg btn-info" id="ayuda2">Llamada a un amigo</button>
+
+
+      <div id="outer">
+        <div class="inner"><button class="btn btn-dark" id="ayuda">Ayuda del Publico</button></div>
+        <div class="inner"><button class="btn btn-dark" id="ayuda2">Llamada a un amigo</button></div>
+        <div class="inner"><button class="btn btn-dark" id="ayuda3">50/50</button></div>
+        <br>
+        <br>
+      </div>
+
+      <span id="timer" style="text-align: left;"><strong>Tiempo: 30 segundos</strong></span>
     </div>
     <div class="card text-center bg-dark" id="pregunta1">
       <br>
@@ -110,20 +119,24 @@
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="a2" class="button fondoA"><span class="amarillo">A:</span>Los tipos de datos JavaScript son: Cadena, booleano, Objeto, INT, definido.</button>
+            <button id="a2" class="button fondoA"><span class="amarillo">A:</span>Los tipos de datos JavaScript son:
+              Cadena, booleano, Objeto, INT, definido.</button>
           </div>
           <div class="opciones__item">
-            <button id="b2" class="button fondoB"><span class="amarillo">B:</span> Los tipos de datos JavaScript son: String, booleano, Objeto, Número, definido.</button>
+            <button id="b2" class="button fondoB"><span class="amarillo">B:</span> Los tipos de datos JavaScript son:
+              String, booleano, Objeto, Número, definido.</button>
           </div>
         </div>
       </div>
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="c2" class="button fondoA"><span class="amarillo">C:</span>Los tipos de datos JavaScript son: String, booleano, Objeto, Flotante, Indefinido.</button>
+            <button id="c2" class="button fondoA"><span class="amarillo">C:</span>Los tipos de datos JavaScript son:
+              String, booleano, Objeto, Flotante, Indefinido.</button>
           </div>
           <div class="opciones__item">
-            <button id="d2" class="button fondoB"><span class="amarillo">D:</span>Los tipos de datos JavaScript son: String, booleano, Objeto, Número, Indefinido.</button>
+            <button id="d2" class="button fondoB"><span class="amarillo">D:</span>Los tipos de datos JavaScript son:
+              String, booleano, Objeto, Número, Indefinido.</button>
           </div>
         </div>
       </div>
@@ -134,26 +147,31 @@
     <div class="card text-center bg-dark" id="pregunta3">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 3.¿Qué símbolo se utiliza para los comentarios de una sola linea en Javascript?</h3>
+      <h3 class="display-5 bg-dark h3"> 3.¿Qué símbolo se utiliza para los comentarios de una sola linea en Javascript?
+      </h3>
       <br>
       <br>
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="a3" class="button fondoA"><span class="amarillo">A:</span>Se usa (**) para comentarios de una sola línea</button>
+            <button id="a3" class="button fondoA"><span class="amarillo">A:</span>Se usa (**) para comentarios de una
+              sola línea</button>
           </div>
           <div class="opciones__item">
-            <button id="b3" class="button fondoB"><span class="amarillo">B:</span>Se usa (}}) para comentarios de una sola línea</button>
+            <button id="b3" class="button fondoB"><span class="amarillo">B:</span>Se usa (}}) para comentarios de una
+              sola línea</button>
           </div>
         </div>
       </div>
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="c3" class="button fondoA"><span class="amarillo">C:</span>Se usa (//) para comentarios de una sola línea</button>
+            <button id="c3" class="button fondoA"><span class="amarillo">C:</span>Se usa (//) para comentarios de una
+              sola línea</button>
           </div>
           <div class="opciones__item">
-            <button id="d3" class="button fondoB"><span class="amarillo">D:</span>Se usa (&&) para comentarios de una sola línea</button>
+            <button id="d3" class="button fondoB"><span class="amarillo">D:</span>Se usa (&&) para comentarios de una
+              sola línea</button>
           </div>
         </div>
       </div>
@@ -204,20 +222,28 @@
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="a5" class="button fondoA"><span class="amarillo">A:</span> < ol ></button>
+            <button id="a5" class="button fondoA"><span class="amarillo">A:</span>
+              < ol>
+            </button>
           </div>
           <div class="opciones__item">
-            <button id="b5" class="button fondoB"><span class="amarillo">B:</span>< ul ></button>
+            <button id="b5" class="button fondoB"><span class="amarillo">B:</span>
+              < ul>
+            </button>
           </div>
         </div>
       </div>
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="c5" class="button fondoA"><span class="amarillo">C:</span>< li ></button>
+            <button id="c5" class="button fondoA"><span class="amarillo">C:</span>
+              < li>
+            </button>
           </div>
           <div class="opciones__item">
-            <button id="d5" class="button fondoB"><span class="amarillo">D:</span>< list ></button>
+            <button id="d5" class="button fondoB"><span class="amarillo">D:</span>
+              < list>
+            </button>
           </div>
         </div>
       </div>
@@ -229,26 +255,35 @@
     <div class="card text-center bg-dark" id="pregunta6">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 6.Las siguientes instrucciones vienen acompañadas de un atributo. ¿Cuál es correcto?</h3>
+      <h3 class="display-5 bg-dark h3"> 6.Las siguientes instrucciones vienen acompañadas de un atributo. ¿Cuál es
+        correcto?</h3>
       <br>
       <br>
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="a6" class="button fondoA"><span class="amarillo">A:</span>< img src="foto.jpg" alt="texto"></button>
+            <button id="a6" class="button fondoA"><span class="amarillo">A:</span>
+              < img src="foto.jpg" alt="texto">
+            </button>
           </div>
           <div class="opciones__item">
-            <button id="b6" class="button fondoB"><span class="amarillo">B:</span>< img src="foto.jpg" value="texto"></button>
+            <button id="b6" class="button fondoB"><span class="amarillo">B:</span>
+              < img src="foto.jpg" value="texto">
+            </button>
           </div>
         </div>
       </div>
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="c6" class="button fondoA"><span class="amarillo">C:</span> < img src="foto.jpg" text="texto"></button>
+            <button id="c6" class="button fondoA"><span class="amarillo">C:</span>
+              < img src="foto.jpg" text="texto">
+            </button>
           </div>
           <div class="opciones__item">
-            <button id="d6" class="button fondoB"><span class="amarillo">D:</span>< img src="foto.jpg" desc="texto"></button>
+            <button id="d6" class="button fondoB"><span class="amarillo">D:</span>
+              < img src="foto.jpg" desc="texto">
+            </button>
           </div>
         </div>
       </div>
@@ -266,20 +301,24 @@
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="a7" class="button fondoA"><span class="amarillo">A:</span>Coded Style Sheets (Hojas de Estilo Codificadas)</button>
+            <button id="a7" class="button fondoA"><span class="amarillo">A:</span>Coded Style Sheets (Hojas de Estilo
+              Codificadas)</button>
           </div>
           <div class="opciones__item">
-            <button id="b7" class="button fondoB"><span class="amarillo">B:</span>Cross-browser Style Sheets (Hojas de Estilo Multi-navegador)</button>
+            <button id="b7" class="button fondoB"><span class="amarillo">B:</span>Cross-browser Style Sheets (Hojas de
+              Estilo Multi-navegador)</button>
           </div>
         </div>
       </div>
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="c7" class="button fondoA"><span class="amarillo">C:</span>Cascading Style Sheets (Hojas de Estilo en Cascada) </button>
+            <button id="c7" class="button fondoA"><span class="amarillo">C:</span>Cascading Style Sheets (Hojas de
+              Estilo en Cascada) </button>
           </div>
           <div class="opciones__item">
-            <button id="d7" class="button fondoB"><span class="amarillo">D:</span>Code of Style Sheets (Código de Hojas de Estilo)</button>
+            <button id="d7" class="button fondoB"><span class="amarillo">D:</span>Code of Style Sheets (Código de Hojas
+              de Estilo)</button>
           </div>
         </div>
       </div>
@@ -297,17 +336,20 @@
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="a8" class="button fondoA"><span class="amarillo">A:</span> Entre las etiquetas "<! --" y "-- >". Ej: <! -- Esto es un comentario CSS -- ></button>
+            <button id="a8" class="button fondoA"><span class="amarillo">A:</span> Entre las etiquetas "<! --" y "-- >"
+                . Ej: <! -- Esto es un comentario CSS --></button>
           </div>
           <div class="opciones__item">
-            <button id="b8" class="button fondoB"><span class="amarillo">B:</span>Entre los caracteres "/" y "/ ". Ej: /* esto es un comentario CSS */  </button>
+            <button id="b8" class="button fondoB"><span class="amarillo">B:</span>Entre los caracteres "/" y "/ ". Ej:
+              /* esto es un comentario CSS */ </button>
           </div>
         </div>
       </div>
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="c8" class="button fondoA"><span class="amarillo">C:</span>Después de los caracteres "//". Ej: // Este es un comentario CSS</button>
+            <button id="c8" class="button fondoA"><span class="amarillo">C:</span>Después de los caracteres "//". Ej: //
+              Este es un comentario CSS</button>
           </div>
           <div class="opciones__item">
             <button id="d8" class="button fondoB"><span class="amarillo">D:</span> No se puede</button>
@@ -322,13 +364,15 @@
     <div class="card text-center bg-dark" id="pregunta9">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 9.¿En qué sección de la página HTML podemos definir una hoja de estilo interna CSS?</h3>
+      <h3 class="display-5 bg-dark h3"> 9.¿En qué sección de la página HTML podemos definir una hoja de estilo interna
+        CSS?</h3>
       <br>
       <br>
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="a9" class="button fondoA"><span class="amarillo">A:</span>Se puede definir en cualquier sección de la página</button>
+            <button id="a9" class="button fondoA"><span class="amarillo">A:</span>Se puede definir en cualquier sección
+              de la página</button>
           </div>
           <div class="opciones__item">
             <button id="b9" class="button fondoB"><span class="amarillo">B:</span> En la sección < head></button>
@@ -341,7 +385,8 @@
             <button id="c9" class="button fondoA"><span class="amarillo">C:</span>En al sección < body></button>
           </div>
           <div class="opciones__item">
-            <button id="d9" class="button fondoB"><span class="amarillo">D:</span>Ap En la sección < footer></footer>olo</button>
+            <button id="d9" class="button fondoB"><span class="amarillo">D:</span>Ap En la sección < footer>
+                </footer>olo</button>
           </div>
         </div>
       </div>
@@ -353,7 +398,8 @@
     <div class="card text-center bg-dark" id="pregunta10">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 10.Git hub es un portal creado para alojar el código de las aplicaciones de cualquier desarrollador y que fue comprado por:
+      <h3 class="display-5 bg-dark h3"> 10.Git hub es un portal creado para alojar el código de las aplicaciones de
+        cualquier desarrollador y que fue comprado por:
       </h3>
       <div class="millonario__item">
         <div class="opciones">
@@ -420,7 +466,8 @@
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="a12" class="button fondoA"><span class="amarillo">A:</span>Para transformar un directorio en un trabajo de Git</button>
+            <button id="a12" class="button fondoA"><span class="amarillo">A:</span>Para transformar un directorio en un
+              trabajo de Git</button>
           </div>
           <div class="opciones__item">
             <button id="b12" class="button fondoB"><span class="amarillo">B:</span>Para crear un init en git</button>
@@ -430,10 +477,12 @@
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="c12" class="button fondoA"><span class="amarillo">C:</span>Para crear un repositorio remoto</button>
+            <button id="c12" class="button fondoA"><span class="amarillo">C:</span>Para crear un repositorio
+              remoto</button>
           </div>
           <div class="opciones__item">
-            <button id="d12" class="button fondoB"><span class="amarillo">D:</span>Para poder inicializar un repositorio de GitHub</button>
+            <button id="d12" class="button fondoB"><span class="amarillo">D:</span>Para poder inicializar un repositorio
+              de GitHub</button>
           </div>
         </div>
       </div>
